--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sans-serif;
+  background: white;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.single-key {
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: inline-block;
+  padding: 10px;
+  margin: 40px;
+}
+
+.single-key img {
+  width: 140px;
+  border-radius: 70px;
+  background-color: #f7f7f7;
+  transform: rotate(-45deg);
+}
+.checkout-btn {
+  background: #b4e9f2;
+}
+
+.btn {
+  float: right;
+  background-color: #9b9b9b;
+  border-radius: 50px;
+  width: 1000px;
+  margin-top: 40px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  padding: 50px;
+  text-align: right;
+  font-size: 3rem;
+}
+
+.btn:active {
+  background: #ff6241;
 }
