--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background: white;
   box-sizing: border-box;
 }
@@ -44,26 +44,39 @@ body {
   font-size: 3rem;
 }  */
 
-.btn {
+.btn_active {
+  background: #ff6241;
+  display: block;
   text-align: right;
-  background-color: #b4e9f2;
   padding: 25px;
   border: none;
   width: 100%;
   border-radius: 3px;
   cursor: pointer;
   font-size: 17px;
-  margin-top: 40px;
-  margin-right: 0px;
-  margin-bottom: 20px;
+  margin-top: 100px;
+}
+
+.btn {
+  display: block;
+  text-align: right;
+  background: #b4e9f2;
+  padding: 25px;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+  margin-top: 100px;
 }
 
 .checkout-btn {
   font-size: 2rem;
-  border-radius: 50;
+  border-radius: 10px;
   padding: 20px;
   background: #9b9b9b;
   color: white;
+  opacity: 1;
 }
 
 .qty {
@@ -71,11 +84,12 @@ body {
 }
 
 .qty img {
-  width: 140px;
+  width: 120px;
   border-radius: 70px;
   background-color: #f7f7f7;
   transform: rotate(-45deg);
   display: block;
+  margin: auto;
 }
 .qty .count {
   color: #000;
@@ -98,7 +112,7 @@ body {
   color: red;
   border: 2px solid red;
   width: 30px;
-  height: 30px;
+
   font: 30px/1 Arial, sans-serif;
   text-align: center;
   border-radius: 50%;
@@ -110,7 +124,7 @@ body {
   color: red;
   border: 2px solid red;
   width: 30px;
-  height: 30px;
+
   font: 30px/1 Arial, sans-serif;
   text-align: center;
   border-radius: 50%;
@@ -140,10 +154,7 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
 input:disabled {
   background-color: white;
-}
-
-.btn:active {
-  background: #ff6241;
 }
