--- a/src/index.css
+++ b/src/index.css
@@ -6,44 +6,6 @@ body {
   box-sizing: border-box;
 }
 
-/* .single-key {
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  display: inline-block;
-  padding: 10px;
-  margin: 40px;
-}
-
-.single-key img {
-  width: 140px;
-  border-radius: 70px;
-  background-color: #f7f7f7;
-  transform: rotate(-45deg);
-  display: block;
-}
-.single-key h2 {
-  margin: 5px;
-}
-} */
-/* .checkout-btn {
-  background: #b4e9f2;
-}
-
-.btn {
-  float: right;
-  background-color: #9b9b9b;
-  border-radius: 30px;
-  width: 1000px;
-  margin-top: 40px;
-  margin-right: 0px;
-  margin-bottom: 20px;
-  padding: 50px;
-  text-align: right;
-  font-size: 3rem;
-}  */
-
 .btn_active {
   background: #ff6241;
   display: block;
@@ -69,9 +31,16 @@ body {
   font-size: 17px;
   margin-top: 100px;
 }
-
+.checkout-inactive {
+  font-size: 2.5rem;
+  border-radius: 10px;
+  padding: 20px;
+  background: #9b9b9b;
+  color: white;
+  opacity: 0.2;
+}
 .checkout-btn {
-  font-size: 2rem;
+  font-size: 2.5rem;
   border-radius: 10px;
   padding: 20px;
   background: #9b9b9b;
@@ -96,7 +65,7 @@ body {
   display: inline-block;
   vertical-align: top;
   font-size: 25px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 30px;
   padding: 0 2px;
   min-width: 35px;
