--- a/src/index.css
+++ b/src/index.css
@@ -51,13 +51,28 @@ body {
 .qty {
   display: inline-block;
 }
-
+.qty h5 {
+  display: block;
+  margin: auto;
+  padding: 10px;
+}
+.qty h6 {
+  display: block;
+  margin: auto;
+  padding-top: 0px;
+  padding-bottom: 10px;
+}
 .qty img {
+  position: absolute;
   width: 120px;
   height: 250px;
   transform: rotate(-45deg);
   display: block;
   margin: auto;
+  top: 20px;
+  bottom: 20px;
+  left: 20px;
+  right: 20px;
 }
 .qty .count {
   color: #000;
@@ -132,9 +147,6 @@ input:disabled {
   border-radius: 50%;
   height: 150px;
   width: 150px;
-  position: fixed;
-  margin-left: 79px;
-  margin-top: 49px;
-  margin-right: 65px;
-  margin-bottom: 43px;
+  position: relative;
+  margin: auto;
 }
