--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background: white;
   box-sizing: border-box;
 }
@@ -50,10 +50,15 @@ body {
 
 .qty {
   display: inline-block;
+  margin-top: 3rem !important;
+  margin-right: 70px;
+  margin-left: 70px;
+  margin-bottom: 70px;
 }
 .qty h5 {
   display: block;
-  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 0px;
   padding: 10px;
 }
 .qty h6 {
@@ -78,7 +83,7 @@ body {
   color: #000;
   display: inline-block;
   vertical-align: top;
-  font-size: 25px;
+  font-size: 17px;
   font-weight: 500;
   line-height: 30px;
   padding: 0 2px;
